log/build_2023-11-09_14-47-30/pond3/stderr.log
  File "/home/igor/Code/Modulo8/install/pond3/lib/python3.10/site-packages/pond3/chatbot.py", line 3
    import .dictionary.intent
           ^
SyntaxError: invalid syntax

